--- a/function_curry.js.html
+++ b/function_curry.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Index</title>
+	<title>DocStrap Source: function/curry.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,32 +60,81 @@
 <div class="row">
 
 	
-	<div class="col-md-8">
+	<div class="col-md-12">
 	
 		<div id="main">
 			
 
-	
-	
+		<h1 class="page-title">Source: function/curry.js</h1>
+    
+<section>
+    <article>
+        <pre
+            class="sunlight-highlight-javascript linenums">import __ from "./placeholderArgument";
+import _arity from "../internals/_arity";
 
+const _curryN = (length, received, func) => (...args) => {
+  let combined = [];
+  let argsIdx = 0;
+  let left = length;
+  let combinedIdx = 0;
 
+  while (combinedIdx &lt; received.length || argsIdx &lt; args.length) {
+    let arg;
 
+    if (
+      combinedIdx &lt; received.length &amp;&amp;
+      (received[combinedIdx] !== __ || argsIdx >= args.length)
+    ) {
+      arg = received[combinedIdx];
+    } else {
+      arg = args[argsIdx++];
+    }
 
+    if (arg !== __) {
+      left--;
+    }
 
+    combined[combinedIdx++] = arg;
+  }
 
+  if (left &lt;= 0) {
+    return func.apply(this, combined);
+  }
 
+  return _arity(left, _curryN(length, combined, func));
+};
 
+/**
+ * Curries the provided function.
+ * A curried function does not need to have all of its provided at once.
+ * If `f` is a ternary and g = curry(f), then the following is equivalent:
+ *
+ * &lt;pre>
+ * g(1)(2)(3);
+ * g(1)(2, 3);
+ * g(1, 2)(3);
+ * g(1, 2, 3);
+ * &lt;/pre>
+ *
+ * Additionaly, the F.__ symbol can be used as a placeholder argument,
+ * when you want to partially apply arguments with gaps inbetween them.
+ *
+ * &lt;pre>
+ * g(1, __, 3)(2);
+ * g(__, __, 3)(1, 2);
+ * g(__, __, 3)(__, 2)(1);
+ * &lt;/pre>
+ *
+ * @param {function} func
+ * @returns {function}
+ */
+const curry = (func) => _curryN(func.length, [], func);
 
-
-
-	
-	
-
-
-
-
-
-
+export default curry;
+</pre>
+    </article>
+</section>
 
 
 
@@ -96,10 +145,6 @@
 
 	<div class="clearfix"></div>
 
-	
-		<div class="col-md-3">
-			<div id="toc" class="col-md-3 hidden-xs hidden-sm hidden-md"></div>
-		</div>
 	
 
 </div>
