--- a/function_flip.js.html
+++ b/function_flip.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Index</title>
+	<title>DocStrap Source: function/flip.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,32 +60,30 @@
 <div class="row">
 
 	
-	<div class="col-md-8">
+	<div class="col-md-12">
 	
 		<div id="main">
 			
 
-	
-	
+		<h1 class="page-title">Source: function/flip.js</h1>
+    
+<section>
+    <article>
+        <pre
+            class="sunlight-highlight-javascript linenums">import curry from "./curry";
 
+/**
+ * Creates a new function that takes its arguments
+ * in reverse order of the original function.
+ *
+ * @param {function} func
+ */
+const flip = (func) => (...args) => func(...args.reverse());
 
-
-
-
-
-
-
-
-
-
-	
-	
-
-
-
-
-
-
+export default curry(flip);
+</pre>
+    </article>
+</section>
 
 
 
@@ -96,10 +94,6 @@
 
 	<div class="clearfix"></div>
 
-	
-		<div class="col-md-3">
-			<div id="toc" class="col-md-3 hidden-xs hidden-sm hidden-md"></div>
-		</div>
 	
 
 </div>
