--- a/function_memoizeWith.js.html
+++ b/function_memoizeWith.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Index</title>
+	<title>DocStrap Source: function/memoizeWith.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,32 +60,43 @@
 <div class="row">
 
 	
-	<div class="col-md-8">
+	<div class="col-md-12">
 	
 		<div id="main">
 			
 
-	
-	
+		<h1 class="page-title">Source: function/memoizeWith.js</h1>
+    
+<section>
+    <article>
+        <pre
+            class="sunlight-highlight-javascript linenums">import curry from "./curry";
 
+/**
+ * Memoizes a function where the key generator function
+ * decides which cached result should be returned.
+ *
+ * @param {function} keyGenerator
+ * @param {function} func
+ */
+const memoizeWith = (keyGenerator, func) => {
+  const cache = {};
 
+  return (...args) => {
+    const key = keyGenerator(...args);
+    if (!cache.hasOwnProperty(key)) {
+      const result = func(...args);
+      cache[key] = result;
+    }
 
+    return cache[key];
+  };
+};
 
-
-
-
-
-
-
-
-	
-	
-
-
-
-
-
-
+export default curry(memoizeWith);
+</pre>
+    </article>
+</section>
 
 
 
@@ -96,10 +107,6 @@
 
 	<div class="clearfix"></div>
 
-	
-		<div class="col-md-3">
-			<div id="toc" class="col-md-3 hidden-xs hidden-sm hidden-md"></div>
-		</div>
 	
 
 </div>
