--- a/function_placeholderArgument.js.html
+++ b/function_placeholderArgument.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Index</title>
+	<title>DocStrap Source: function/placeholderArgument.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,32 +60,27 @@
 <div class="row">
 
 	
-	<div class="col-md-8">
+	<div class="col-md-12">
 	
 		<div id="main">
 			
 
-	
-	
+		<h1 class="page-title">Source: function/placeholderArgument.js</h1>
+    
+<section>
+    <article>
+        <pre
+            class="sunlight-highlight-javascript linenums">/**
+ * Placeholder argument for curried functions.
+ *
+ * @see curry
+ */
+const __ = Symbol("placeholderArgument");
 
-
-
-
-
-
-
-
-
-
-
-	
-	
-
-
-
-
-
-
+export default __;
+</pre>
+    </article>
+</section>
 
 
 
@@ -96,10 +91,6 @@
 
 	<div class="clearfix"></div>
 
-	
-		<div class="col-md-3">
-			<div id="toc" class="col-md-3 hidden-xs hidden-sm hidden-md"></div>
-		</div>
 	
 
 </div>
