--- a/function_tap.js.html
+++ b/function_tap.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Index</title>
+	<title>DocStrap Source: function/tap.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,32 +60,34 @@
 <div class="row">
 
 	
-	<div class="col-md-8">
+	<div class="col-md-12">
 	
 		<div id="main">
 			
 
-	
-	
+		<h1 class="page-title">Source: function/tap.js</h1>
+    
+<section>
+    <article>
+        <pre
+            class="sunlight-highlight-javascript linenums">import curry from "./curry";
 
+/**
+ * Runs a function on an argument and returns the argument.
+ *
+ * @param {function} func
+ * @param {any} arg
+ * @returns {any}
+ */
+const tap = (func, arg) => {
+  func(arg);
+  return arg;
+};
 
-
-
-
-
-
-
-
-
-
-	
-	
-
-
-
-
-
-
+export default curry(tap);
+</pre>
+    </article>
+</section>
 
 
 
@@ -96,10 +98,6 @@
 
 	<div class="clearfix"></div>
 
-	
-		<div class="col-md-3">
-			<div id="toc" class="col-md-3 hidden-xs hidden-sm hidden-md"></div>
-		</div>
 	
 
 </div>
