--- a/string_toUpper.js.html
+++ b/string_toUpper.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Index</title>
+	<title>DocStrap Source: string/toUpper.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -60,32 +60,29 @@
 <div class="row">
 
 	
-	<div class="col-md-8">
+	<div class="col-md-12">
 	
 		<div id="main">
 			
 
-	
-	
+		<h1 class="page-title">Source: string/toUpper.js</h1>
+    
+<section>
+    <article>
+        <pre
+            class="sunlight-highlight-javascript linenums">import { curry } from "../function";
 
+/**
+ * Converts a string to upper case.
+ *
+ * @param {string} str
+ */
+const toUpper = (str) => str.toUpperCase();
 
-
-
-
-
-
-
-
-
-
-	
-	
-
-
-
-
-
-
+export default curry(toUpper);
+</pre>
+    </article>
+</section>
 
 
 
@@ -96,10 +93,6 @@
 
 	<div class="clearfix"></div>
 
-	
-		<div class="col-md-3">
-			<div id="toc" class="col-md-3 hidden-xs hidden-sm hidden-md"></div>
-		</div>
 	
 
 </div>
