--- a/list_insert.js.html
+++ b/list_insert.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/insert.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,24 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/insert.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
+import splice from "./splice";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Inserts an element at the specified index, pushing the following elements back.
  *
- * @param {function} func
- * @returns {function}
+ * @param {number} index
+ * @param {any} value
+ * @param {any[]} list
  */
-const unapply = (func) => (...args) => func(args);
+const insert = (index, value, list) => splice(index, 0, [value], list);
 
-export default curry(unapply);
+export default curry(insert);
 </pre>
     </article>
 </section>
