--- a/list_adjust.js.html
+++ b/list_adjust.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/adjust.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,30 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/adjust.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Returns a new array with the element at the provided index
+ * updated by the transformation function.
  *
- * @param {function} func
- * @returns {function}
+ * @param {number} index
+ * @param {function} transformFn
+ * @param {any[]} list
+ * @returns {any[]}
  */
-const unapply = (func) => (...args) => func(args);
+const adjust = (index, transformFn, list) => {
+  const _index = index >= 0 ? index : list.length + index;
+  const newList = list.slice();
+  newList[_index] = transformFn(newList[_index]);
+  return newList;
+};
 
-export default curry(unapply);
+export default curry(adjust);
 </pre>
     </article>
 </section>
