--- a/list_all.js.html
+++ b/list_all.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/all.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,30 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/all.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import reduceWhile from "./reduceWhile";
+import { curry, identity } from "../function/";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Checks if all elements of a list pass a condition.
  *
- * @param {function} func
- * @returns {function}
+ * @param {function} condFn
+ * @param {any[]} list
+ * @returns {boolean}
  */
-const unapply = (func) => (...args) => func(args);
+const all = (condFn, list) =>
+  reduceWhile(
+    identity,
+    (acc, current, index, list) => acc &amp;&amp; condFn(current, index, list),
+    true,
+    list
+  );
 
-export default curry(unapply);
+export default curry(all);
 </pre>
     </article>
 </section>
