--- a/list_append.js.html
+++ b/list_append.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/append.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,24 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/append.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import { curry } from "../function";
+import { size, insert } from "./";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Appends a new element at the end of a list.
  *
- * @param {function} func
- * @returns {function}
+ * @param {any} value
+ * @param {any[]} list
+ * @returns {any[]}
  */
-const unapply = (func) => (...args) => func(args);
+const append = (value, list) => insert(size(list), value, list);
 
-export default curry(unapply);
+export default curry(append);
 </pre>
     </article>
 </section>
