--- a/list_find.js.html
+++ b/list_find.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/find.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,23 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/find.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Returns the first element of a list that passes the condition function.
  *
- * @param {function} func
- * @returns {function}
+ * @param {function} condFn
+ * @param {any[]} list
+ * @returns {any}
  */
-const unapply = (func) => (...args) => func(args);
+const find = (condFn, list) => list.find(condFn);
 
-export default curry(unapply);
+export default curry(find);
 </pre>
     </article>
 </section>
