--- a/list_flatten.js.html
+++ b/list_flatten.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/flatten.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,35 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/flatten.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
+import forEach from "./forEach";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Returns a new list with all nested arrays flattened.
  *
- * @param {function} func
- * @returns {function}
+ * @param {any[]} list
+ * @returns {any[]}
  */
-const unapply = (func) => (...args) => func(args);
+const flatten = (list) => {
+  const result = [];
 
-export default curry(unapply);
+  forEach((value) => {
+    if (Array.isArray(value)) {
+      forEach((innerValue) => result.push(innerValue), flatten(value));
+    } else {
+      result.push(value);
+    }
+  }, list);
+
+  return result;
+};
+
+export default curry(flatten);
 </pre>
     </article>
 </section>
