--- a/list_forEach.js.html
+++ b/list_forEach.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/forEach.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,40 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/forEach.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
+import _objectForEach from "../internals/_objectForEach";
+import _stringWhile from "../internals/_stringWhile";
+import always from "../function/always";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Runs a function for each element of the list, object or string.
  *
- * @param {function} func
- * @returns {function}
+ * @param {function} fn
+ * @param {any[]|object|string} list
+ * @returns {undefined}
  */
-const unapply = (func) => (...args) => func(args);
+const forEach = (fn, list) => {
+  if (Array.isArray(list)) {
+    return list.forEach(fn);
+  }
 
-export default curry(unapply);
+  if (typeof list === "object") {
+    return _objectForEach(fn, list);
+  }
+
+  if (typeof list === "string") {
+    return _stringWhile(always(true), fn, list);
+  }
+
+  throw new Error("Can only use forEach on arrays, objects and strings.");
+};
+
+export default curry(forEach);
 </pre>
     </article>
 </section>
