--- a/list_join.js.html
+++ b/list_join.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/join.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,24 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/join.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Joins the elements of a list into a string
+ * with the "glue" string inbetween each element.
+ * Defers to [Array.prototype.join]{@link https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/join}
  *
- * @param {function} func
- * @returns {function}
+ * @param {*} glue
+ * @param {*} list
  */
-const unapply = (func) => (...args) => func(args);
+const join = (glue, list) => list.join(glue);
 
-export default curry(unapply);
+export default curry(join);
 </pre>
     </article>
 </section>
