--- a/list_keyWith.js.html
+++ b/list_keyWith.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/keyWith.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,36 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/keyWith.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import { forEach } from ".";
+import { curry } from "../function";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Creates an object whose keys are determined by `keyFn`.
+ * Each element of the list will be assigned in the object based on the key generated.
+ * If the key function returns the same values for 2 elements from the list,
+ * the one that's later in the list will overwrite the earlier one.
+ * This function is useful if you have an array of objects that you want to convert to an object.
  *
- * @param {function} func
- * @returns {function}
+ * @param {function} keyFn
+ * @param {any[]} list
+ * @returns {object}
  */
-const unapply = (func) => (...args) => func(args);
+const keyWith = (keyFn, list) => {
+  const object = {};
 
-export default curry(unapply);
+  forEach((value, index, ls) => {
+    object[keyFn(value, index, ls)] = value;
+  }, list);
+
+  return object;
+};
+
+export default curry(keyWith);
 </pre>
     </article>
 </section>
