--- a/list_map.js.html
+++ b/list_map.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/map.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,44 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/map.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
+import _objectMap from "../internals/_objectMap";
+import _stringMap from "../internals/_stringMap";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Maps over a list, object or string and returns a new object of the corresponding type.
+ * Each element of the collection is passed through the mapping function
+ * and its return value is used for the new collection.
+ * The mapping function receives `(value, key, list)`,
+ * where `list` is the full list, object or string.
+ * Defers to [Array.prototype.map]{@link https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map} for lists
  *
  * @param {function} func
- * @returns {function}
+ * @param {any[]|object|string} list
+ * @returns {any[]|object|string}
  */
-const unapply = (func) => (...args) => func(args);
+const map = (func, list) => {
+  if (typeof list.map === "function") {
+    return list.map(func);
+  }
 
-export default curry(unapply);
+  if (typeof list === "object") {
+    return _objectMap(func, list);
+  }
+
+  if (typeof list === "string") {
+    return _stringMap(func, list);
+  }
+
+  throw new Error("Argument is not mappable");
+};
+
+export default curry(map);
 </pre>
     </article>
 </section>
