--- a/list_prepend.js.html
+++ b/list_prepend.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/prepend.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,25 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/prepend.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import { insert } from "./";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Prepends a value at the beginning of a list.
  *
- * @param {function} func
- * @returns {function}
+ * @function
+ * @name prepend
+ * @param {any} value
+ * @param {any[]} list
+ * @returns {any[]}
  */
-const unapply = (func) => (...args) => func(args);
+const prepend = insert(0);
 
-export default curry(unapply);
+export default prepend;
 </pre>
     </article>
 </section>
