--- a/list_reduce.js.html
+++ b/list_reduce.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/reduce.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,29 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/reduce.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import always from "../function/always";
+import curry from "../function/curry";
+import reduceWhile from "./reduceWhile";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Reduces a list, object or string to a single value output value.
+ * The reducer function receives the following arguments `(accumulator, currentValue, key, list)`,
+ * where `list` is the whole list, object or string.
  *
  * @param {function} func
- * @returns {function}
+ * @param {any} initialValue
+ * @param {any[]|object|string} list
+ * @returns {any}
  */
-const unapply = (func) => (...args) => func(args);
+const reduce = (func, initialValue, list) =>
+  reduceWhile(always(true), func, initialValue, list);
 
-export default curry(unapply);
+export default curry(reduce);
 </pre>
     </article>
 </section>
