--- a/list_slice.js.html
+++ b/list_slice.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/slice.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,27 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/slice.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Slices an array from begin to end.
+ * Defers to the `list.slice` method.
+ * See the documentation about [Array.prototype.slice]{@link https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/slice}
+ * and [String.prototype.slice]{@link https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/slice}
  *
- * @param {function} func
- * @returns {function}
+ * @param {number} begin
+ * @param {number} end
+ * @param {any[]|string} list
+ * @returns {any[]|string}
  */
-const unapply = (func) => (...args) => func(args);
+const slice = (begin, end, list) => list.slice(begin, end);
 
-export default curry(unapply);
+export default curry(slice);
 </pre>
     </article>
 </section>
