--- a/list_take.js.html
+++ b/list_take.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/take.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,27 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/take.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import slice from "./slice";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Takes the first `n` elements of a list,
+ * where `n` is the number of elements to take.
+ * The original list is left unchanged.
  *
- * @param {function} func
- * @returns {function}
+ * @function
+ * @name take
+ * @param {number} n
+ * @param {any[]} list
+ * @returns {any[]}
  */
-const unapply = (func) => (...args) => func(args);
+const take = slice(0);
 
-export default curry(unapply);
+export default take;
 </pre>
     </article>
 </section>
