--- a/list_takeLast.js.html
+++ b/list_takeLast.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/takeLast.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,26 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/takeLast.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
+import slice from "./slice";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Similar to `take`, but takes elements from the end of the list.
  *
- * @param {function} func
- * @returns {function}
+ * @see take
+ * @param {number} numElements
+ * @param {any[]} list
+ * @returns {any[]}
  */
-const unapply = (func) => (...args) => func(args);
+const takeLast = (numElements, list) =>
+  slice(-1 * numElements, list.length, list);
 
-export default curry(unapply);
+export default curry(takeLast);
 </pre>
     </article>
 </section>
