--- a/list_zip.js.html
+++ b/list_zip.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/zip.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,42 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/zip.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Creates a new list with pairs of values from the 2 lists,
+ * where each pair consists of the element with the same index from each array.
+ * If one list has more elements than the other,
+ * then the pairing will be done up to the lenght of the shorter array.
+ * The resulting array has the following format:
+ * &lt;pre>
+ * [
+ *   [list1el1, list2el1],
+ *   [list1el2, list2el2],
+ *   // ...
+ * ]
+ * &lt;/pre>
  *
- * @param {function} func
- * @returns {function}
+ * @param {any[]} list1
+ * @param {any[]} list2
  */
-const unapply = (func) => (...args) => func(args);
+const zip = (list1, list2) => {
+  const length = list1.length &lt; list2.length ? list1.length : list2.length;
 
-export default curry(unapply);
+  const result = [];
+  for (let index = 0; index &lt; length; index++) {
+    result.push([list1[index], list2[index]]);
+  }
+
+  return result;
+};
+
+export default curry(zip);
 </pre>
     </article>
 </section>
