--- a/list_zipObj.js.html
+++ b/list_zipObj.js.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>DocStrap Source: function/unapply.js</title>
+	<title>DocStrap Source: list/zipObj.js</title>
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -65,22 +65,41 @@
 		<div id="main">
 			
 
-		<h1 class="page-title">Source: function/unapply.js</h1>
+		<h1 class="page-title">Source: list/zipObj.js</h1>
     
 <section>
     <article>
         <pre
-            class="sunlight-highlight-javascript linenums">import curry from "./curry";
+            class="sunlight-highlight-javascript linenums">import curry from "../function/curry";
 
 /**
- * Creates a variadic function from a unary function that accepts a list.
+ * Similar to `zip`, but the elements of the first list are used for keys
+ * and the values of the second list are used as values for the resulting object.
+ * The format of the resulting object is the following:
+ * &lt;pre>
+ * {
+ *   [list1el1]: list2el1,
+ *   [list1el2]: list2el2,
+ *   // ...
+ * }
+ * &lt;/pre>
  *
- * @param {function} func
- * @returns {function}
+ * @see zip
+ * @param {any[]} keys
+ * @param {any[]} values
+ * @returns {object}
  */
-const unapply = (func) => (...args) => func(args);
+const zipObj = (keys, values) => {
+  const length = keys.length &lt; values.length ? keys.length : values.length;
 
-export default curry(unapply);
+  const result = {};
+  for (let index = 0; index &lt; length; index++) {
+    result[keys[index]] = values[index];
+  }
+  return result;
+};
+
+export default curry(zipObj);
 </pre>
     </article>
 </section>
