Fix formatting for the includes function.

--- a/global.html
+++ b/global.html
@@ -8584,7 +8584,7 @@ The path can be given as a dot-separated string or a list of strings.</p>
 
     
     <div class="description">
-        <p>Checks if the list includes <code>element, starting from </code>fromIndex`.<br>
+        <p>Checks if the list includes <code>element</code>, starting from <code>fromIndex</code>.<br>
 Defers to <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/includes">Array.prototype.includes</a></p>
     </div>
     
